<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/details_scroll_view"
    android:layout_marginTop="?attr/actionBarSize"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.khanal.popularmovies.DetailActivityFragment"
    tools:showIn="@layout/activity_detail">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/movie_title"
            style="@style/title_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RelativeLayout
            android:id="@+id/upper_layout"
            android:layout_below="@+id/movie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/poster"
                style="@style/poster"
                android:scaleType="fitStart"
                android:minWidth="185dp"
                android:minHeight="277dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RelativeLayout
                android:layout_toRightOf="@+id/poster"
                android:paddingLeft="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/movie_year"
                    style="@style/movie_year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/movie_rating"
                    android:layout_below="@+id/movie_year"
                    style="@style/movie_rating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/add_to_favorite"
                    android:layout_below="@+id/movie_rating"
                    style="@style/favorite_button"
                    android:text="@string/mark_as_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </RelativeLayout>


        </RelativeLayout>

        <TextView
            android:id="@+id/synopsis"
            style="@style/synopsis"
            android:layout_below="@id/upper_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_margin="10dp"
            android:layout_below="@id/synopsis"
            android:background="#333333"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:maxHeight="1dp"/>

        <LinearLayout
            android:layout_margin="10dp"
            android:id="@+id/main_layout_for_trailers"
            android:layout_below="@id/synopsis"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="20sp"
                android:text="@string/trailers_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_margin="10dp"
            android:id="@+id/main_layout_for_reviews"
            android:layout_below="@id/main_layout_for_trailers"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:textSize="20sp"
                android:text="@string/reviews_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />



        </LinearLayout>




    </RelativeLayout>


</ScrollView>




