<resources>

    <string name="settings_screen_title">Settings</string>
    <string name="details_screen_title">Movie Details</string>
    <string name="app_name">Pop Movies</string>
    <string name="action_settings">Settings</string>
    <string name="mark_as_favorite" translatable="false">Mark As\nFavorite</string>

    <string name="image_base_uri">http://image.tmdb.org/t/p/w185/</string>
    <string name="sort_by_param" translatable="false">sort_by</string>
    <string name="api_key" translatable="false">d4cb1a5611095189dc11c7b9781eac71</string>
    <string name="api_key_param" translatable="false">api_key</string>
    <string name="most_popular" translatable="false">popularity.desc</string>
    <string name="highest_rated" translatable="false">vote_average.desc</string>
    <string name="favorites" translatable="false">favorites</string>

    <string name="pref_sort_by_title">Sort Movies By</string>
    <string name="pref_sort_by_default_value" translatable="false">popularity.desc</string>
    <string name="pref_sort_by_key">SORT_KEY</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="trailers_title">Trailers:</string>
    <string name="reviews_title">Reviews:</string>


</resources>
