<?xml version="1.0" encoding="utf-8"?>
<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/grid_item_poster"
    android:scaleType="fitXY"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />